# arba-math

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  cmake_quick_install.cmake  conanfile.py  math-config.cmake.in
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  math_example.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/arba/math/: concepts.hpp  vec2.hpp  version.hpp.in
include/math/: concepts.hpp  vec2.hpp
test/: CMakeLists.txt  project_version_tests.cpp  vec2_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
